<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_beasiswa"
            android:icon="@drawable/beasiswa"
            android:title="@string/menu_beasiswa" />
        <item
            android:id="@+id/nav_internship"
            android:icon="@drawable/internship"
            android:title="@string/menu_internship" />
        <item
            android:id="@+id/nav_seminar"
            android:icon="@drawable/seminar"
            android:title="@string/menu_seminar" />
    </group>

    <item android:title="Lainnya">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/info"
                android:title="@string/menu_info" />
            <item
                android:id="@id/nav_profil"
                android:icon="@drawable/profil"
                android:title="@string/menu_profil"/>
        </menu>
    </item>
</menu>