<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_beasiswa">

    <fragment android:id="@+id/nav_beasiswa"
        android:name="com.example.formasi2.ui.beasiswa.BeasiswaFragment"
        android:label="@string/menu_beasiswa"
        tools:layout="@layout/beasiswa_fragment"/>

    <fragment android:id="@+id/nav_internship"
        android:name="com.example.formasi2.ui.internship.InternshipFragment"
        android:label="@string/menu_internship"
        tools:layout="@layout/internship_fragment"/>

    <fragment android:id="@+id/nav_seminar"
        android:name="com.example.formasi2.ui.seminar.SeminarFragment"
        android:label="@string/menu_seminar"
        tools:layout="@layout/seminar_fragment"/>

    <fragment android:id="@+id/nav_info"
        android:name="com.example.formasi2.ui.informasi.InformasiFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/info_fragment"/>

    <fragment android:id="@+id/nav_profil"
        android:label="@string/menu_profil"
        android:name="com.example.formasi2.ui.profil.ProfilFragment"
        tools:layout="@layout/profil_fragment"/>
</navigation>